# NoOptCBFQP

./: README.md  pyproject.toml
nooptcbfqp/: __init__.py  cbfqp.py
test/: test_cbfqp.py
