[tool.poetry]
name = "nooptcbfqp"
version = "0.1.0"
description = ""
authors = ["Bolun Dai <daibolun19950216@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
proxsuite = "^0.6.7"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
