[tool.poetry]
name = "nooptcbfqp"
version = "0.1.0"
description = ""
authors = ["Bolun Dai <daibolun19950216@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"


[tool.poetry.group.test.dependencies]
proxsuite = "^0.6.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
